# server/schemas/openapi.json
@@ -529,6 +529,12 @@
       "SecretIn": {
         "additionalProperties": false,
         "properties": {
+          "ephemeral": {
+            "type": "boolean"
+          },
+          "expire_after": {
+            "type": "integer"
+          },
           "value": {
             "type": "string"
           }
